--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.15",
     "next": "latest",
+    "node": "^19.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
