--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.15",
     "next": "latest",
+    "next-auth": "^4.19.2",
     "node": "^19.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
