--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.15",
+    "firebase": "^9.17.1",
     "next": "latest",
     "next-auth": "^4.19.2",
     "node": "^19.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
